# HelpmateAI_RAG_QA_System

./: .dockerignore  .env.example  .gitignore  DEVLOG.md  Dockerfile  HelpmateAI_RAG_QA_System_README.md  HelpmateAI_RAG_project_Cleaned.ipynb  RAG_Experiment_Plan.md  README.md  ROADMAP.md  pyproject.toml  render.yaml  requirements.txt  requirements_helpmate_rag.txt
.github/workflows/: ci.yml  deploy.yml
.streamlit/: config.toml
backend/: __init__.py  auth.py  main.py  maintenance.py  store.py
deploy/vps/: .env.example  Caddyfile  docker-compose.yml
docs/: architecture-flow.md  architecture.md  deployment.md  frontend-reference.md  implementation-history.md  quickstart.md  supabase-workspace-retention.sql
docs/adr/: ADR-001-streamlit-first-backend-ready-rag-app.md  ADR-002-local-first-hybrid-rag-with-chroma-and-evals.md  ADR-003-structured-abstention-and-benchmark-driven-quality.md  ADR-004-document-intelligence-layer-for-structure-aware-retrieval.md  ADR-005-dual-retrieval-routing-with-lightweight-llm-tiebreaker.md  ADR-006-deterministic-weak-evidence-recovery-and-guardrails.md  ADR-007-document-topology-planning-and-bounded-evidence-selection.md  ADR-008-benchmark-driven-stack-defaults-and-experimental-selector.md  ADR-009-benchmark-driven-chunking-default-1200-240.md  ADR-010-reorder-only-evidence-selector-promoted-to-default.md  ADR-011-partial-grounded-answers-and-support-guardrail-eval.md  ADR-012-smart-section-profiles-and-orchestrated-scope.md  (+2 more)
frontend/: next.config.ts  package-lock.json  package.json
src/: __init__.py  config.py  query_router.py  question_starters.py  schemas.py
tests/: test_answer_cache.py  test_chroma_batching.py  test_chunk_semantics_service.py  test_chunking.py  test_cloud_storage_config.py  test_evidence_selector.py  test_final_eval_suite.py  test_financebench_eval.py  test_generation_service.py  test_ingest_docling.py  test_query_analysis.py  test_query_artifact_routing.py  test_query_rewriter.py  test_query_router.py  test_ragas_eval.py  test_ragas_judge.py  test_reranker_score_handling.py  test_retrieval_helpers.py  test_retrieval_planner.py  test_run_traces.py  test_section_profiles.py  test_section_retriever.py  test_sections_service.py  test_structure_repair_service.py  test_structure_service.py  test_synopsis_semantics_service.py  test_topology_service.py  test_vectara_benchmark.py  test_vectara_eval.py  test_vendor_answer_eval.py  test_workspace_retention.py  test_workspace_sweeper.py
tmp/: ab_conditional_rewrite_models.json  ab_new_models.json  ab_old_models.json  ab_rewrite_mini_models.json  ab_summary_fix_check.json  deterministic_rewrite_sanity_pass.json  guardrail_sanity_pass.json  post_section_upgrade_benchmarks.json  section_retrieval_upgrade_sanity_pass.json
(+321 files in other folders)
